# Form1

./: .clang-format  .gitignore  AllSongsPlaylist.cpp  AllSongsPlaylist.h  App.rc  AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  BootstrapForm1.bat  CMakeLists.txt  Common.h  Form1.cpp  Form1.h  Form1.qrc  Form1.ui  Main.cpp  ModificationRecorder.h  MusicLibrary.cpp  MusicLibrary.h  MusicSource.cpp  MusicSource.h  MusicSourceFolder.cpp  MusicSourceFolder.h  Playlist.cpp  Playlist.h  README.md  RegularPlaylist.cpp  RegularPlaylist.h  SettingsDlg.cpp  SettingsDlg.h  SettingsDlg.ui  Sidebar.cpp  Sidebar.h  SmartPlaylist.cpp  SmartPlaylist.h  SmartPlaylistDlg.cpp  SmartPlaylistDlg.h  SmartPlaylistDlg.ui  SmartPlaylistQuery.cpp  (+11 more)
Config/: AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  SettingsDlg.cpp  SettingsDlg.h  SettingsDlg.ui
GUI/: Form1.cpp  Form1.h  Form1.qrc  Form1.ui  RateSongDlg.cpp  RateSongDlg.h  RateSongDlg.ui  Sidebar.cpp  Sidebar.h  SongInfoDlg.cpp  SongInfoDlg.h  SongInfoDlg.ui  TracklistView.cpp  TracklistView.h
Misc/: Common.h  FileSystemWatcher.cpp  FileSystemWatcher.h  Main.cpp  ModificationRecorder.h  Song.h  Utils.cpp
MusicLibrary/: MusicLibrary.cpp  MusicLibrary.h  MusicSource.cpp  MusicSource.h  MusicSourceFolder.cpp  MusicSourceFolder.h  SortLibraryDlg.cpp  SortLibraryDlg.h  SortLibraryDlg.ui
Playlists/: AllSongsPlaylist.cpp  AllSongsPlaylist.h  Playlist.cpp  Playlist.h  RegularPlaylist.cpp  RegularPlaylist.h
Playlists/AllSongs/: AllSongsPlaylist.cpp
Playlists/Radio/: RadioPlaylist.cpp  RadioPlaylist.h  RadioPlaylistDlg.cpp  RadioPlaylistDlg.h  RadioPlaylistDlg.ui
Playlists/Regular/: RegularPlaylist.cpp  RegularPlaylist.h
Playlists/Smart/: SmartPlaylist.cpp  SmartPlaylist.h  SmartPlaylistDlg.cpp  SmartPlaylistDlg.h  SmartPlaylistQuery.cpp
SmartPlaylists/: SmartPlaylist.cpp  SmartPlaylist.h  SmartPlaylistDlg.cpp  SmartPlaylistDlg.h  SmartPlaylistDlg.ui  SmartPlaylistQuery.cpp  SmartPlaylistQuery.h
SoundDevices/: SoundDevice.h  SoundDeviceBass.cpp  SoundDeviceBass.h  SoundDeviceQt.h
